Gest/voice, customize, diag, dr mode, hv/seats, weather tweaks, scan ec

--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -56,7 +56,7 @@
                             New Driver
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="hvAndSeats.html">
                         <div id="menu_box_10">
                             HVAC & Seats
                         </div>
@@ -66,12 +66,12 @@
                             Weather
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="gestureAndVoice.html">
                         <div id="menu_box_12">
                             Gesture & Voice
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="driverMode.html">
                         <div id="menu_box_13">
                             Driver Mode
                         </div>
@@ -82,11 +82,7 @@
                         </div>
                     </a>
             </div>
-            <div id="customizeBar">
-                    <a href="">
-                        <img src="image/customizeBar.png" width="50%">
-                    </a>
-            </div>
+            
             <div id="menu">
                 <a href="maps.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
