--- a/radioMenu.html
+++ b/radioMenu.html
@@ -54,7 +54,7 @@
                             New Driver
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="hvAndSeats.html">
                         <div id="menu_box_10">
                             HVAC & Seats
                         </div>
@@ -64,12 +64,12 @@
                             Weather
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="gestureAndVoice.html">
                         <div id="menu_box_12">
                             Gesture & Voice
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="driverMode.html">
                         <div id="menu_box_13">
                             Driver Mode
                         </div>
@@ -80,11 +80,7 @@
                         </div>
                     </a>
             </div>
-            <div id="customizeBar">
-                    <a href="">
-                        <img src="image/customizeBar.png" width="50%">
-                    </a>
-            </div>
+            
             <!-- phone options -->
             <div id="menu">
                 <a href="radio.html">
