--- a/scanEC.html
+++ b/scanEC.html
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Diagnostics</title>
+        <title>Error Codes</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <div id="phone">
             <div id="menu">
-                <a href="diagnosticsMenu.html">
+                <a href="scanECMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                         <div id="homeMenu">
                             Home
                         </div>
-                </a>
+                    </a>
             </div>
-            <div id="diag">
+            <div id="ec_main">
                 <a>
-                    <img src="image/diag.PNG" alt="Diagnostics" height="100%">
+                    <img src="image/errorcodes.PNG" alt="Error Codes" height="100%">
                 </a>
             </div>
-            <div id="scanEC">
-                <a href="scanEC.html">
-                <img src="image/scanec.PNG" alt="Scan Error Codes" height="100%">
-                </a>
-                <!--<a class="ecButton" href="scanEC.html">
-                    <div id="errorCodes">
-                    Scan Error Codes
-                    </div>
-                </a>-->
-            </div>
+            
         </div>
 
         <div>
