--- a/customize.html
+++ b/customize.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hifi prototype</title>
+        <title>Customize</title>
 
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
@@ -19,22 +19,35 @@
                         </div>
                     </a>
             </div>
+            <div id="customizeBar">
+                    <a href="landing.html">
+                        <img src="image/customizeBar.png" width="50%">
+                    </a>
+            </div>
             <div id="home_left">
-                <a href="maps.html">
+                <a>
                     <img src="image/map.png" width="100%">
                 </a>
             </div>
             <div id="home_right">
-                <a href="driverMode.html">
+                <a>
                 <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
                 </a>
             </div>
-            <div id="home_bottom" >
+            <div id="cs_menu">
+                <img src="image/customizemenu.PNG" width="50%">
+            </div>
+            <div>
+                <img id="x1" src="image/x.png" alt="Remove" width="25%">
+                <img id="x2" src="image/x.png" alt="Remove" width="25%">
+
+            </div>
+            <!--<div id="home_bottom" >
                 <a href="radio.html">
                     <img src="image/radio.png" height="90%" style="padding-right:1.5%";>
                     <img src="image/radioOptions.png" height="90%" >
                 </a>
-            </div>
+            </div>-->
         </div>
     </body>
     <footer>
