--- a/landingMenu.html
+++ b/landingMenu.html
@@ -57,7 +57,7 @@
                             New Driver
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="hvAndSeats.html">
                         <div id="menu_box_10">
                             HVAC & Seats
                         </div>
@@ -67,12 +67,12 @@
                             Weather
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="gestureAndVoice.html">
                         <div id="menu_box_12">
                             Gesture & Voice
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="driverMode.html">
                         <div id="menu_box_13">
                             Driver Mode
                         </div>
@@ -84,7 +84,7 @@
                     </a>
             </div>
             <div id="customizeBar">
-                    <a href="">
+                    <a href="customize.html">
                         <img src="image/customizeBar.png" width="50%">
                     </a>
             </div>
