edited menu options added traffic page

--- a/cameraMenu.html
+++ b/cameraMenu.html
@@ -50,7 +50,7 @@
                         Maps
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="traffic.html">
                     <div id="menu_box_8">
                         Traffic Alerts
                     </div>
@@ -85,11 +85,6 @@
                         Fleet
                     </div>
                 </a>
-        </div>
-        <div id="customizeBar">
-            <a href="">
-                <img src="image/customizeBar.png" width="50%">
-            </a>
         </div>
         <!-- In here are the phone screen settings -->
         <div id="menu">
