--- a/trafficMenu.html
+++ b/trafficMenu.html
@@ -6,28 +6,25 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-
         <div id="phone">
             <!-- In here are the phone screen settings -->
-            <!-- this is the menu -->
-            <!-- each of these boxes needs linked to their own page -->
             <div id="menu_button">
-                    <a class="menu" href="camera.html">
+                    <a class="menu" href="">
                         <div id="menu_box_1">
                             Camera
                         </div>
                     </a>
-                    <a class="menu" href="camera-logs.html">
+                    <a class="menu" href="">
                         <div id="menu_box_2">
                             Camera Logs
                         </div>
                     </a>
-                    <a class="menu" href="diagnostics.html">
+                    <a class="menu" href="">
                         <div id="menu_box_3">
                          Diagnostics
                         </div>
                     </a>
-                    <a class="menu" href="face-recognition.html">
+                    <a class="menu" href="">
                         <div id="menu_box_4">
                             Facial Recognition
                         </div>
@@ -77,41 +74,53 @@
                             Driver Mode
                         </div>
                     </a>
-                    <a class="menu" href="fleet-diags.html">
+                    <a class="menu" href="">
                         <div id="menu_box_14">
                             Fleet
                         </div>
                     </a>
             </div>
-            <div id="customizeBar">
-                    <a href="">
-                        <img src="image/customizeBar.png" width="50%">
-                    </a>
-            </div>
-            <!-- the rest of the page goes here. -->
-            <!-- change hyperlink back to whatever page this is. Not the menu! -->
-            <a href="landing.html">
-                <div id="menu">
+            <div id="menu">
+                <a href="traffic.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
-                    <a class="menu" href="landing.html">
-                            <div id="homeMenu">
-                                Home
-                            </div>
-                        </a>
-                </div>
-                <div id="home_left">
-                    <img src="image/map.png" width="100%">
-                </div>
-                <div id="home_right">
-                    <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
-                </div>
-                <div id="home_bottom">
-                    <img src="image/radio.png" height="90%" style="padding-right:1.5%;">
-                    <img src="image/radioOptions.png" height="90%" >
-                </div>
-            </a>
-        </div>
+                </a>
+                <a class="menu" href="landing.html">
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                    </a>
+                    <div id="Nav">
+                            Traffic Alert
+                    </div>
+            </div>
 
+            <!-- In here are the phone screen settings -->
+            <!-- this is the quadrents for the new driver -->
+            <a href="traffic.html">
+            <div style="padding-top:8%;">
+                <p class="trafficTitle" style="text-align: center;">
+                    ---ATTENTION---
+                </p>
+                <p class="trafficSubTitle" style="text-align: center;">
+                    There is a traffic alert for your area.
+                </p>
+                <p class="trafficSubTitle" style="text-align: center;">
+                    Police are on the lookout for a Black Volkswagon Passat.
+                </p>
+                <p class="trafficSubTitle" style="text-align: center;">
+                    California Licence Plate: 
+                <p class="trafficSubTitle" style="text-align: center; color: blue">
+                    5LCR908
+                </p>
+                <p class="trafficSubTitle" style="text-align: center;">
+                    If you see this vehicle, please call the police at
+                </p>
+                <p class="trafficSubTitle" style="text-align: center; color: blue">
+                        (618) 555-COPS
+                </p>
+            </div>
+        </a>
+        </div>
     </body>
     <footer>
 
