--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -49,7 +49,7 @@
                         Maps
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="traffic.html">
                     <div id="menu_box_8">
                         Traffic Alerts
                     </div>
@@ -83,11 +83,6 @@
                     <div id="menu_box_14">
                         Fleet
                     </div>
-                </a>
-            </div>
-            <div id="customizeBar">
-                <a href="">
-                    <img src="image/customizeBar.png" width="50%">
                 </a>
             </div>
             <div id="menu">
