--- a/face-recognitionMenu.html
+++ b/face-recognitionMenu.html
@@ -51,7 +51,7 @@
                         Maps
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="traffic.html">
                     <div id="menu_box_8">
                         Traffic Alerts
                     </div>
@@ -86,11 +86,6 @@
                         Fleet
                     </div>
                 </a>
-        </div>
-        <div id="customizeBar">
-            <a href="">
-                <img src="image/customizeBar.png" width="50%">
-            </a>
         </div>
         <div id="menu">
             <a href="face-recognition.html">
