--- a/newDriverMenu.html
+++ b/newDriverMenu.html
@@ -44,7 +44,7 @@
                             Maps
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="traffic.html">
                         <div id="menu_box_8">
                             Traffic Alerts
                         </div>
