--- a/weatherMenu.html
+++ b/weatherMenu.html
@@ -32,7 +32,7 @@
                         Radio
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="cd.html">
                     <div id="menu_box_6">
                         CD
                     </div>
@@ -42,12 +42,12 @@
                         Maps
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="traffic.html">
                     <div id="menu_box_8">
                         Traffic Alerts
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="newDriver.html">
                     <div id="menu_box_9">
                         New Driver
                     </div>
