--- a/customize.html
+++ b/customize.html
@@ -18,6 +18,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            Customize
+                    </div>
             </div>
             <div id="customizeBar">
                     <a href="landing.html">
