--- a/driverMode.html
+++ b/driverMode.html
@@ -15,6 +15,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            Modes
+                    </div>
             </div>
             <div id="modes">
                 <img src="image/normal.PNG" alt="Normal Mode" height="100%">
