--- a/fleet-diagsMenu.html
+++ b/fleet-diagsMenu.html
@@ -27,7 +27,7 @@
                             Camera Logs
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="diagnostics.html">
                         <div id="menu_box_3">
                             Diagnostics
                         </div>
@@ -52,7 +52,7 @@
                             Maps
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="traffic.html">
                         <div id="menu_box_8">
                             Traffic Alerts
                         </div>
@@ -62,7 +62,7 @@
                             New Driver
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="hvAndSeats.html">
                         <div id="menu_box_10">
                             HVAC & Seats
                         </div>
@@ -72,12 +72,12 @@
                             Weather
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="gestureAndVoice.html">
                         <div id="menu_box_12">
                             Gesture & Voice
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="driverMode.html">
                         <div id="menu_box_13">
                             Driver Mode
                         </div>
