--- a/gestureAndVoiceMenu.html
+++ b/gestureAndVoiceMenu.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>HVAC & Seats</title>
+        <title>Gesture & Voice</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <div id="phone">
                 <div id="menu_button">
-                        <a class="menu" href="">
+                        <a class="menu" href="camera.html">
                             <div id="menu_box_1">
                                 Camera
                             </div>
                         </a>
-                        <a class="menu" href="">
+                        <a class="menu" href="camera-logs.html">
                             <div id="menu_box_2">
                                 Camera Logs
                             </div>
@@ -22,7 +22,7 @@
                              Diagnostics
                             </div>
                         </a>
-                        <a class="menu" href="">
+                        <a class="menu" href="face-recognition.html">
                             <div id="menu_box_4">
                                 Facial Recognition
                             </div>
@@ -32,7 +32,7 @@
                                 Radio
                             </div>
                         </a>
-                        <a class="menu" href="">
+                        <a class="menu" href="cd.html">
                             <div id="menu_box_6">
                                 CD
                             </div>
@@ -42,12 +42,12 @@
                                 Maps
                             </div>
                         </a>
-                        <a class="menu" href="">
+                        <a class="menu" href="traffic.html">
                             <div id="menu_box_8">
                                 Traffic Alerts
                             </div>
                         </a>
-                        <a class="menu" href="">
+                        <a class="menu" href="newDriver.html">
                             <div id="menu_box_9">
                                 New Driver
                             </div>
@@ -72,7 +72,7 @@
                                 Driver Mode
                             </div>
                         </a>
-                        <a class="menu" href="">
+                        <a class="menu" href="fleet-diags.html">
                             <div id="menu_box_14">
                                 Fleet
                             </div>
@@ -88,6 +88,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            Gesture/Voice
+                    </div>
                 </div>
                 <div id="gesture">
                         <img src="image/gesturevoice.PNG" alt="Gesture and Voice Controls" height="100%">
