--- a/hvAndSeats.html
+++ b/hvAndSeats.html
@@ -15,6 +15,9 @@
                             Home
                         </div>
                 </a>
+                <div id="Nav">
+                        HVAC/Seats
+                </div>
             </div>
             <div id="hvac">
                 <a>
