--- a/mapsMenu.html
+++ b/mapsMenu.html
@@ -11,12 +11,12 @@
             <!-- this is the menu -->
             <!-- each of these boxes needs linked to their own page -->
             <div id="menu_button">
-                    <a class="menu" href="">
+                    <a class="menu" href="camera.html">
                         <div id="menu_box_1">
                             Camera
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="camera-logs.html">
                         <div id="menu_box_2">
                             Camera Logs
                         </div>
@@ -26,7 +26,7 @@
                          Diagnostics
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="face-recognition.html">
                         <div id="menu_box_4">
                             Facial Recognition
                         </div>
@@ -76,7 +76,7 @@
                             Driver Mode
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="fleet-diags.html">
                         <div id="menu_box_14">
                             Fleet
                         </div>
