--- a/radioMenu.html
+++ b/radioMenu.html
@@ -9,12 +9,12 @@
         <div id="phone">
             <!-- In here are the phone screen settings -->
             <div id="menu_button">
-                    <a class="menu" href="">
+                    <a class="menu" href="camera.html">
                         <div id="menu_box_1">
                             Camera
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="camera-logs.html">
                         <div id="menu_box_2">
                             Camera Logs
                         </div>
@@ -24,7 +24,7 @@
                          Diagnostics
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="face-recognition.html">
                         <div id="menu_box_4">
                             Facial Recognition
                         </div>
@@ -74,7 +74,7 @@
                             Driver Mode
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="fleet-diags.html">
                         <div id="menu_box_14">
                             Fleet
                         </div>
