--- a/weatherMenu.html
+++ b/weatherMenu.html
@@ -7,12 +7,12 @@
     <body>
         <div id="phone">
             <div id="menu_button">
-                <a class="menu" href="">
+                <a class="menu" href="camera.html">
                     <div id="menu_box_1">
                         Camera
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="camera-logs.html">
                     <div id="menu_box_2">
                         Camera Logs
                     </div>
@@ -22,7 +22,7 @@
                      Diagnostics
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="face-recognition.html">
                     <div id="menu_box_4">
                         Facial Recognition
                     </div>
@@ -72,7 +72,7 @@
                         Driver Mode
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="fleet-diags.html">
                     <div id="menu_box_14">
                         Fleet
                     </div>
