--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -24,7 +24,7 @@
                         Camera Logs
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="diagnostics.html">
                     <div id="menu_box_3">
                      Diagnostics
                     </div>
@@ -59,7 +59,7 @@
                         New Driver
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="hvAndSeats.html">
                     <div id="menu_box_10">
                         HVAC & Seats
                     </div>
@@ -69,12 +69,12 @@
                         Weather
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="gestureAndVoice.html">
                     <div id="menu_box_12">
                         Gesture & Voice
                     </div>
                 </a>
-                <a class="menu" href="">
+                <a class="menu" href="driverMode.html">
                     <div id="menu_box_13">
                         Driver Mode
                     </div>
