--- a/diagnostics.html
+++ b/diagnostics.html
@@ -15,6 +15,9 @@
                             Home
                         </div>
                 </a>
+                <div id="Nav">
+                        Diagnostics
+                </div>
             </div>
             <div id="diag">
                 <a>
