--- a/gestureAndVoice.html
+++ b/gestureAndVoice.html
@@ -15,6 +15,9 @@
                             Home
                         </div>
                 </a>
+                <div id="Nav">
+                        Gesture/Voice
+                </div>
             </div>
             <div id="gesture">
             <img src="image/gesturevoice.PNG" alt="Gesture and Voice Controls" height="100%">
