--- a/newDriverMenu.html
+++ b/newDriverMenu.html
@@ -9,22 +9,22 @@
         <div id="phone">
             <!-- In here are the phone screen settings -->
             <div id="menu_button">
-                    <a class="menu" href="">
+                    <a class="menu" href="camera.html">
                         <div id="menu_box_1">
                             Camera
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="camera-logs.html">
                         <div id="menu_box_2">
                             Camera Logs
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="diagnostics.html">
                         <div id="menu_box_3">
                          Diagnostics
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="face-recognition.html">
                         <div id="menu_box_4">
                             Facial Recognition
                         </div>
@@ -54,7 +54,7 @@
                             New Driver
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="hvAndSeats.html">
                         <div id="menu_box_10">
                             HVAC & Seats
                         </div>
@@ -64,17 +64,17 @@
                             Weather
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="gestureAndVoice.html">
                         <div id="menu_box_12">
                             Gesture & Voice
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="driverMode.html">
                         <div id="menu_box_13">
                             Driver Mode
                         </div>
                     </a>
-                    <a class="menu" href="">
+                    <a class="menu" href="fleet-diags.html">
                         <div id="menu_box_14">
                             Fleet
                         </div>
