--- a/scanEC.html
+++ b/scanEC.html
@@ -15,6 +15,9 @@
                             Home
                         </div>
                     </a>
+                    <div id="Nav">
+                            Error Codes
+                    </div>
             </div>
             <div id="ec_main">
                 <a>
