Added feature to Face Recognition where hitting record will verify the driver

--- a/face-recognitionMenu.html
+++ b/face-recognitionMenu.html
@@ -103,7 +103,7 @@
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
         <div id="detect-square"></div>
-        <a href="#" class="record">RECORD</a>
+        <a href="face-recognition-successfulMenu.html" class="record">RECORD</a>
     </div>
 
 </body>
