--- a/face-recognition-successful.html
+++ b/face-recognition-successful.html
@@ -16,7 +16,7 @@
     <div id="phone-facerecognition">
         <!-- In here are the phone screen settings -->
         <div id="menu">
-            <a href="face-recognitionMenu.html">
+            <a href="face-recognition-successfulMenu.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
@@ -30,8 +30,9 @@
             <!-- <a href="#" class="cameralogbtn">Camera Logs</a> -->
             <!-- <span id="cameralogs">Camera Logs</span> -->
         </div>
-        <div id="detect-square"></div>
-        <a href="face-recognition-successful.html" class="record">RECORD</a>
+        <!-- <div id="detect-square"></div> -->
+        <div id="verification-success">Verification successful!</div>
+        <a href="#" class="record">RECORD</a>
     </div>
 
 </body>
