Small fix to Fleet, forgot hyperlinks to Diagnostics page

--- a/fleet-diags.html
+++ b/fleet-diags.html
@@ -31,22 +31,22 @@
                 <!-- <span id="cameralogs">Camera Logs</span> -->
             </div>
             <div id="top-left-diag">
-                <a href="">
+                <a href="diagnostics.html">
                     <strong>VEHICLE #001<br> LICENSE GH9 76T</strong>
                 </a>
             </div>
             <div id="top-right-diag">
-                <a href="">
+                <a href="diagnostics.html">
                     <strong>VEHICLE #002<br> LICENSE 8Z8 1MQ</strong>
                 </a>
             </div>
             <div id="bottom-left-diag">
-                <a href="">
+                <a href="diagnostics.html">
                     <strong>VEHICLE #003<br> LICENSE ZS1 F20</strong>
                 </a>
             </div>
             <div id="bottom-right-diag">
-                <a href="">
+                <a href="diagnostics.html">
                     <strong>VEHICLE #004<br> LICENSE 78U YL5</strong>
                 </a>
             </div>
