Added fancy embedded map from Google Maps to Maps page

--- a/maps.html
+++ b/maps.html
@@ -23,11 +23,12 @@
                     </div>
             </div>
             <img src="image/directions.png"  height="100%">
-            <img src="image/map.png"  height="100%" style="position:absolute; right:0%;
+            <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d99634.63313781522!2d-90.17493542382738!3d38.704438360294326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x8875f876c00c44af%3A0x12142919658a02c3!2s1+Hairpin+Dr%2C+Edwardsville%2C+IL+62025!3m2!1d38.7930622!2d-89.9967072!4m5!1s0x87d8b4a9faed8ef9%3A0xbe39eaca22bbe05b!2sSt+Louis%2C+MO!3m2!1d38.627002499999996!2d-90.19940419999999!5e0!3m2!1sen!2sus!4v1540936110284" width="60%" height="90%" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <!-- <img src="image/map.png"  height="100%" style="position:absolute; right:0%;
                                                             top:10%; height:90%;
                                                             overflow:hidden;
                                                             background-size: cover;
-                                                            background-position: center;">
+                                                            background-position: center;"> -->
         </div>
     </body>
     <footer>
