Changed color of drop down menu button, and the color of most font (including traffic alerts and drop down menu font)

--- a/fleet-diags.html
+++ b/fleet-diags.html
@@ -18,7 +18,7 @@
             <!-- In here are the phone screen settings -->
             <div id="menu">
                 <a href="fleet-diagsMenu.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                         <div id="homeMenu">
