--- a/traffic.html
+++ b/traffic.html
@@ -11,7 +11,7 @@
 
             <div id="menu">
                 <a href="trafficMenu.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                     <div id="homeMenu">
@@ -19,7 +19,7 @@
                     </div>
                 </a>
                 <div id="Nav">
-                        Traffic Alert
+                        Traffic Alerts
                 </div>
             </div>
             <!-- In here are the phone screen settings -->
