--- a/trafficMenu.html
+++ b/trafficMenu.html
@@ -77,7 +77,7 @@
             </div>
             <div id="menu">
                 <a href="traffic.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                         <div id="homeMenu">
@@ -85,7 +85,7 @@
                         </div>
                     </a>
                     <div id="Nav">
-                            Traffic Alert
+                            Traffic Alerts
                     </div>
             </div>
 
