--- a/camera-logsMenu.html
+++ b/camera-logsMenu.html
@@ -82,7 +82,7 @@
             </div>
             <div id="menu">
                 <a href="camera-logs.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                         <div id="homeMenu">
