--- a/face-recognition-successfulMenu.html
+++ b/face-recognition-successfulMenu.html
@@ -84,7 +84,7 @@
         </div>
         <div id="menu">
             <a href="face-recognition-successful.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                         <div id="homeMenu">
