--- a/fleet-diagsMenu.html
+++ b/fleet-diagsMenu.html
@@ -85,7 +85,7 @@
             </div>
             <div id="menu">
                     <a href="fleet-diags.html">
-                            <img src="image/menu.png" alt="Menu Icon" height="100%">
+                            <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                         </a>
                         <a class="menu" href="landing.html">
                                 <div id="homeMenu">
