--- a/radioMenu.html
+++ b/radioMenu.html
@@ -78,7 +78,7 @@
             <!-- phone options -->
             <div id="menu">
                 <a href="radio.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                     <div id="homeMenu">
