--- a/weatherMenu.html
+++ b/weatherMenu.html
@@ -76,7 +76,7 @@
         
         <div id="menu">
             <a href="weather.html">
-                <img src="image/menu.png" alt="Menu Icon" height="100%">
+                <img src="image/menu-new.png" alt="Menu Icon" height="100%">
             </a>
             <a class="menu" href="landing.html">
                 <div id="homeMenu">
